# Matrices-Evolved

./: .gitignore  .gitmodules  API.md  BUILD.md  CMakeLists.txt  Dockerfile  MANIFEST.in  README.md  build-docker.sh  publish.sh  pyproject.toml  requirements.txt  setup.py
.cargo/: config.toml
cpp/: event_signing.cpp  global.h  lib.cpp
cpp/base64/decoders/: base64-decoder.cpp
cpp/base64/decoders/implementations/: ams-avx.cpp  ams-neon-lut.cpp  ams-neon.cpp  ams-sse.cpp  lemire-avx.cpp
cpp/base64/decoders/include/: ams-avx.h  ams-neon-lut.h  ams-neon.h  ams-sse.h  base64-decoder.h  lemire-avx.h
cpp/base64/encoders/: base64-encoder.cpp
cpp/base64/encoders/implementations/: ams-avx.cpp  ams-sse-aligned.cpp  ams-sse.cpp  lemire-avx.cpp  mulla-sse.cpp
cpp/base64/encoders/include/: ams-avx.h  ams-sse-aligned.h  ams-sse.h  base64-encoder.h  lemire-avx.h  mulla-sse.h
cpp/benchmark/: Makefile  README.md  full_bench  full_bench.cpp  functions.cpp
cpp/crypto/: ed25519.cpp  ed25519.h
cpp/json/: canonicalization.cpp  canonicalization.h  decoder.cpp  decoder.h  encoder.cpp  encoder.h
matrices_evolved/: __init__.py
rust/: Cargo.toml  lib.rs
rust/crypto/: cache.rs  event_signing.rs  mod.rs  stream_change_cache.rs
tests/: test.py
