[build-system]
requires = ["scikit-build-core>=0.4.3", "nanobind>=2.0.0"]
build-backend = "scikit_build_core.build"

[project]
name = "matrices_evolved"
version = "1.0.0"
description = "High-performance Matrix event signing library"
authors = [{name = "Aless Microsystems", email = "albertalesso@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["nanobind>=2.0.0"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers", 
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
]

[tool.scikit-build]
minimum-version = "0.4"
build-dir = "build/{wheel_tag}"
wheel.expand-macos-universal-tags = true

[tool.cibuildwheel]
build = "cp310-*"
skip = "*-win32 *-manylinux_i686"

