[build-system]
requires = ["scikit-build-core>=0.4.3", "nanobind>=2.0.0"]
build-backend = "scikit_build_core.build"

[project]
name = "matrices_evolved"
version = "1.0.2"
description = "High-performance Matrix event signing library"
authors = [{name = "Aless Microsystems", email = "albertalesso@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = ["nanobind>=2.0.0"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers", 
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
]

[tool.scikit-build]
minimum-version = "0.4"
build-dir = "build/{wheel_tag}"
wheel.expand-macos-universal-tags = true

[tool.cibuildwheel]
build = "cp311-*"
skip = "*-win32 *-manylinux_i686"

